Added some tests and tweaked test data

--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
-Support (and test) csv as output type.
 Check the input parameters.
   Check that the directory of the output file exists at the beginning.
 Check the data.
   Make sure each row in the input file has the same number of columns.
-Add documentation for all functions.
+Support (and test) csv as output type.
 Support inner joins.
+Add documentation for all functions.
+  Set up readthedocs.
 Add parallelization support.
 Provide a way to stream a file as input and/or output?
