--- a/TODO
+++ b/TODO
@@ -1,23 +1,37 @@
-[Me] Add parallelization support in Builder.
-  Identify location(s) where parallelization can help.
-  Add documentation for convert_delimited_file_to_f4. Mention .gz file support.
+[Me] They should be able to search for missing values. Tweak code and add test(s) for this. Modify test data.
+[Me] In Builder, implement chunking when saving to a file similar to what's in Parser.
+[Me] In convert_delimited_file_to_f4, have ways to short-circuit or raise exceptions when files are small/empty.
+[Me] Support compression in Builder2.py
+  Make compression an option in convert function.
+  Add whitespace buffer at the end of each line. Use max(max_line_sizes). __format_string_as_fixed_width(x, size)
+    Specify this in .ll file.
+[Me] Test parallelization/compression building on tall.tsv.gz.
 [Me] Add parallelization support in Parser.
   Identify location(s) where parallelization can help.
   Add documentation for convert_delimited_file_to_f4. Mention .gz file support.
+  Make compression an option in parse function. Autodetect?
+  Test parallelization/compression parsing on tall.tsv.gz.
+[Me] In DataSetBuilder, add transposed (& compressed) optionf or index columns.
+  Provide an option where the user can specify which rows will be searched (thus reducing # of transposed rows that must be stored). Before querying these, make sure they exist.
 [Me] Remove ConvertTsvToFixedWidthFile3.py
-[Me] Test on gnomad/CADD files.
+[Me] Add documentation for convert_delimited_file_to_f4. Mention .gz file support.
+  Mention that if they specify tmp_dir_path, we assume that it is empty. It will not work if it is not.
+[Me] Test building and parsing on gnomad/CADD files.
   gnomad: See notes in TickTick.
   CADD: Compare against tabix. We can also compare it in terms of size.
-[Me] In DataSetBuilder, add transposed (compressed?) data.
+  Move to test.sh and generate formal statistics on it.
+[Me] Move functions out of Helper.py. If you keep any, document them.
+[Me] Remove commented code and complete all TODO items in code.
 
 [MeLater] Store discrete data in separate table from numeric? The first column is a JSON dictionary that maps Unicode characters to unique values in the column. This could save a lot of disk space in most cases.
 [MeLater] Support OR logic for filtering.
-[MeLater] Support inner joins?
+[MeLater] Support joins.
 [MeLater] Look at pandas for other functionality that might make sense to support.
   Add to student's TODO list.
 [MeLater] Set up readthedocs.
 
 [??] Rework the format so that everything is stored in a single file.
+  Modify constructor of Parser.py accordingly.
 
 [Student] Add function to DataSetParser to return all unique values for a discrete column.
   Use this functionality in DataSetBuilder.
@@ -33,3 +47,4 @@
 [Student] Provide a way to stream a file as input and/or output?
 
 [StudentLater] Translate to Rust. Or create Rust/Python wrapper. https://crates.io/crates/pyo3
+  https://www.youtube.com/watch?v=Ygk0IMbu2nY
