--- a/TODO
+++ b/TODO
@@ -1,19 +1,22 @@
+[Me] Support OR logic for filtering.
 [Me] They should be able to search for missing values. Tweak code and add test(s) for this. Modify test data.
 [Me] In Builder, implement chunking when saving to a file similar to what's in Parser.
-[Me] In convert_delimited_file_to_f4, have ways to short-circuit or raise exceptions when files are small/empty.
-[Me] Support compression in Builder2.py
-  Make compression an option in convert function.
+[Me] In convert_delimited_file_to_f4, have ways to short-circuit or raise exceptions when files are empty.
+[Me] Implement ability to query using arbitrary Python code, such as "endswith()". (RegExFilter)
+  Numeric1 > 0.1 and Discrete1 == "abc" and Discrete2 ~= "regex"
+[Me] Add parallelization support in Parser. TestParseTall.py
+  Output file should be in same order as F4 file.
+  Make query criteria identical to what we are using in the paper.
+[Me] Support compression
+  Make compression an option in convert function in Builder2.py.
+  Make compression an option in parse function. Autodetect?
   Add whitespace buffer at the end of each line. Use max(max_line_sizes). __format_string_as_fixed_width(x, size)
     Specify this in .ll file.
-[Me] Test parallelization/compression building on tall.tsv.gz.
-[Me] Add parallelization support in Parser.
-  Identify location(s) where parallelization can help.
-  Add documentation for convert_delimited_file_to_f4. Mention .gz file support.
-  Make compression an option in parse function. Autodetect?
-  Test parallelization/compression parsing on tall.tsv.gz.
+[Me] Test parallelization/compression building/parsing on tall.tsv.gz.
+  Remove print statements and import datetime from Builder2.py.
 [Me] In DataSetBuilder, add transposed (& compressed) optionf or index columns.
   Provide an option where the user can specify which rows will be searched (thus reducing # of transposed rows that must be stored). Before querying these, make sure they exist.
-[Me] Remove ConvertTsvToFixedWidthFile3.py
+[Me] Remove ConvertTsvToFixedWidthFile3.py, TestBuild*.py?, TestParse*.py?
 [Me] Add documentation for convert_delimited_file_to_f4. Mention .gz file support.
   Mention that if they specify tmp_dir_path, we assume that it is empty. It will not work if it is not.
 [Me] Test building and parsing on gnomad/CADD files.
@@ -24,7 +27,6 @@
 [Me] Remove commented code and complete all TODO items in code.
 
 [MeLater] Store discrete data in separate table from numeric? The first column is a JSON dictionary that maps Unicode characters to unique values in the column. This could save a lot of disk space in most cases.
-[MeLater] Support OR logic for filtering.
 [MeLater] Support joins.
 [MeLater] Look at pandas for other functionality that might make sense to support.
   Add to student's TODO list.
