--- a/TODO
+++ b/TODO
@@ -1,26 +1,25 @@
-[Me] Parallelize and chunkify the indexing logic.
-[Me] Look at mmap settings to see if something might perform better and test it on large files.
 [Me] Profile the parsing code: https://docs.python.org/3/library/profile.html
+[Me] Why Docker so slow? Volumes? Run the Docker tests when you copy the data inside the container.
 [Me] Remove ConvertTsvToFixedWidthFile3.py, TestBuild*.py?, TestParse*.py?
 [Me] Remove commented code and complete all TODO items in code. Make sure all arguments to public functions are fully validated.
 [Me] If possible, move functions out of Helper.py. If you keep any, document them.
-[Me] Add documentation for all public functions.
-  Mention .gz file support.
-  Mention that if they specify tmp_dir_path, we assume that it is empty. It will not work if it is not.
 [Me] Test building and parsing on gnomad/CADD files.
   gnomad: See notes in TickTick.
   CADD: Compare against tabix. We can also compare it in terms of size.
-  Move to test.sh and generate formal statistics on it.
+  Move to test.sh and generate formal statistics on it?
 
-[MeLater] Support in_file_delimiter="," and out_file_type="csv"
+[Me] Support joins.
+[Me] Use Travis CI for continuous integration and running the tests.
+[Me] Support in_file_delimiter="," and out_file_type="csv"
   Change in_file_delimiter to in_file_type?
   Make sure exception when invalid value specified.
-[MeLater] Store discrete data in separate table from numeric? The first column is a JSON dictionary that maps Unicode characters to unique values in the column. This could save a lot of disk space in most cases.
+[Me] Look at pandas for other functionality that might make sense to support. Add to student's TODO list.
+[Me] Store discrete data in separate table from numeric? The first column is a JSON dictionary that maps Unicode characters to unique values in the column. This could save a lot of disk space in most cases.
   When inferring column sizes and types, store missing values using a single character and replace them when the values are queried?
-[MeLater] Set up readthedocs.
-[MeLater] Look at pandas for other functionality that might make sense to support.
-  Add to student's TODO list.
-[MeLater] Support joins.
+[Me] Add documentation for all public functions.
+  Mention .gz file support.
+  Mention that if they specify tmp_dir_path, we assume that it is empty. It will not work if it is not.
+[Me] Set up readthedocs.
 
 [Student] Rework the format so that everything is stored in a single file.
 [Student] Add function to DataSetParser to return all unique values for a discrete column?
