--- a/TODO
+++ b/TODO
@@ -29,5 +29,7 @@
 [Student] Provide explicit support for VCF format?
 [Student] Provide a way to stream a file as input and/or output?
 
+[StudentLater] Build a FastAPI wrapper (depends on what we say in the NIH proposal).
+
 [StudentLater] Translate to Rust. Or create Rust/Python wrapper. https://crates.io/crates/pyo3
   https://www.youtube.com/watch?v=Ygk0IMbu2nY
