--- a/TODO
+++ b/TODO
@@ -1,20 +1,26 @@
-[Me] Profile the parsing code: https://docs.python.org/3/library/profile.html
-[Me] Change the name of this repository to F4py.
+What to do with the commented code in TestSmall.py?
+
 [Me] Why Docker so slow? Volumes? Run the Docker tests when you copy the data inside the container.
-[Me] Remove ConvertTsvToFixedWidthFile3.py, TestBuild*.py?, TestParse*.py?
-[Me] Remove commented code and complete all TODO items in code. Make sure all arguments to public functions are fully validated.
-[Me] If possible, move functions out of Helper.py. If you keep any, document them.
-[Me] Test building and parsing on gnomad/CADD files.
-  gnomad: See notes in TickTick.
-  CADD: Compare against tabix. We can also compare it in terms of size.
+[Me] Profile the parsing code: https://docs.python.org/3/library/profile.html
+[Me] Remove commented code and complete all TODO items in code.
+[Me] Rework the format so that everything is stored in a single file.
+
+[Me] Test building and parsing on CADD files.
+  Compare against tabix. We can also compare it in terms of size.
   Move to test.sh and generate formal statistics on it?
 
+[Me] Make sure all arguments to public functions are fully validated in tests.
+[Me] Remove ConvertTsvToFixedWidthFile3.py, TestBuild*.py?, TestParse*.py?
+[Me] If possible, move functions out of Helper.py. If you keep any, document them.
+[Me] Change the name of this repository to F4py.
+
+
 [Me] Support joins.
-[Me] Use Travis CI for continuous integration and running the tests.
+[Me] GitHub builds for continuous integration and running the tests.
 [Me] Support in_file_delimiter="," and out_file_type="csv"
   Change in_file_delimiter to in_file_type?
   Make sure exception when invalid value specified.
-[Me] Look at pandas for other functionality that might make sense to support. Add to student's TODO list.
+[Me] Look at pandas for other functionality that might make sense to support. Add to TODO list.
 [Me] Store discrete data in separate table from numeric? The first column is a JSON dictionary that maps Unicode characters to unique values in the column. This could save a lot of disk space in most cases.
   When inferring column sizes and types, store missing values using a single character and replace them when the values are queried?
 [Me] Add documentation for all public functions.
@@ -22,15 +28,13 @@
   Mention that if they specify tmp_dir_path, we assume that it is empty. It will not work if it is not.
 [Me] Set up readthedocs.
 
-[Student] Rework the format so that everything is stored in a single file.
-[Student] Add function to DataSetParser to return all unique values for a discrete column?
-[Student] Add function to DataSetParser to get summary statistics for a numeric column?
+[Student] Add function to Parser.py to return all unique values for a discrete column?
+[Student] Add function to Parser.py to get summary statistics for a numeric column?
 [Student] Support date and string (has at least one non-number and more than 50% of values are unique?) columns.
 [Student] Support conversion from pandas DataFrame to F4 and vice versa?
-[Student] Provide explicit support for VCF format?
+[Student] Provide explicit support for VCF format? Other bio formats?
 [Student] Provide a way to stream a file as input and/or output?
+[Student] Build a FastAPI wrapper.
 
-[StudentLater] Build a FastAPI wrapper (depends on what we say in the NIH proposal).
-
-[StudentLater] Translate to Rust. Or create Rust/Python wrapper. https://crates.io/crates/pyo3
+[Later] Translate to Rust. Or create Rust/Python wrapper. https://crates.io/crates/pyo3
   https://www.youtube.com/watch?v=Ygk0IMbu2nY
