--- a/TODO
+++ b/TODO
@@ -3,8 +3,13 @@
 
 Modify wide test (here and in main benchmarking tests) so that the wide output file is similar in size to the tall output file.
 
-Provide option to compress indices or not, regardless of whether they compress the data.
 When user specifies num_processes = 1, don't use the joblib/delayed code at all. Use the non-parallelized version that is in Parser.py.
+
+Use set logic in f4py/Filters.py for filtering row indices.
+
+Modify TestSmall.py so that it tests the scenario when an index is used.
+  I don't think we need to support compressed files that do not have an index (too slow).
+  Not sure whether we should compress the index or not. Probably.
 
 
 [Me] Profile the parsing code: https://docs.python.org/3/library/profile.html
