--- a/TODO
+++ b/TODO
@@ -1,16 +1,18 @@
 [Me] Why Docker so slow? Volumes?
   Volumes slow things down about 5-10%.
 
+Using inheritance, create two versions of Parser.py (compressed and not compressed) so
+  we need fewer if statements.
+
+Run profiling code again.
+
 Modify wide test (here and in main benchmarking tests) so that the wide output file is similar in size to the tall output file.
 
 When user specifies num_processes = 1, don't use the joblib/delayed code at all. Use the non-parallelized version that is in Parser.py.
 
-Use set logic in f4py/Filters.py for filtering row indices.
-
 Modify TestSmall.py so that it tests the scenario when an index is used.
   I don't think we need to support compressed files that do not have an index (too slow).
   Not sure whether we should compress the index or not. Probably.
-
 
 [Me] Profile the parsing code: https://docs.python.org/3/library/profile.html
 
