--- a/TODO
+++ b/TODO
@@ -1,14 +1,14 @@
 [Me] Why Docker so slow? Volumes?
   Volumes slow things down about 5-10%.
 
+See how much it helps to run with X parallel threads.
+
+When user specifies num_processes = 1, don't use the joblib/delayed code at all. Use the non-parallelized version that is in Parser.py.
+
 Using inheritance, create two versions of Parser.py (compressed and not compressed) so
   we need fewer if statements.
 
-Run profiling code again.
-
 Modify wide test (here and in main benchmarking tests) so that the wide output file is similar in size to the tall output file.
-
-When user specifies num_processes = 1, don't use the joblib/delayed code at all. Use the non-parallelized version that is in Parser.py.
 
 Modify TestSmall.py so that it tests the scenario when an index is used.
   I don't think we need to support compressed files that do not have an index (too slow).
