--- a/tests/TODO
+++ b/tests/TODO
@@ -1,10 +1,10 @@
-Write code to generate medium-sized files and write tests to make sure the filters work on those.
-
 Change .ct files to use n rather than f to identify numeric columns.
 
 Remove unnecessary comments and address TODO items.
+Remove ConvertTsvToFixedWidthFile3.py, TestBuild*.py?, TestParse*.py?
 
 --Only do what's necessary for the first paper--
+--Move everything else below--
 Modify TestSmall.py so that it tests the scenario when an index and/or compression are used.
   Using inheritance, create different versions of Parser.py (and Indexer.py?).
   I think we need three options:
@@ -14,6 +14,8 @@ Modify TestSmall.py so that it tests the scenario when an index and/or compressi
 
 Check the build code for optimization and how parallelization is done. Then build F4 files for CADD.
 
+Try Nuitka. https://nuitka.net (compiles your Python code to C, is supposed to achieve speedups of 3x or greater).
+
 Test parsing CADD files.
   Compare against tabix. We can also compare it in terms of size.
     https://www.htslib.org/doc/tabix.html
@@ -22,15 +24,13 @@ Test parsing CADD files.
 
 Do demo/tests on LINCS data (see WishBuilder)?
 
-Remove ConvertTsvToFixedWidthFile3.py, TestBuild*.py?, TestParse*.py?
-Remove commented code and complete all TODO items in code.
-
 #####################################################
 # After benchmark paper (for software packages)
 #####################################################
 
 Bring back the filters that I commented out in Filters.py.
   Make sure we have tests for them in TestSmall.py.
+  Also NumericWithoutFilter, NumericBetweenFilter, NumericEqualsFilter, NumericNotEqualsFilter
 
 Implement on-disk binary search for finding column indices based on names (Parser.py).
   This would be beneficial if we want to support datasets with more than 1 million columns.
