--- a/tests/TODO
+++ b/tests/TODO
@@ -1,17 +1,7 @@
 Update Test*Large.py and rerun tests.
-
-Run tests for the following scenarios:
   1) uncompressed data + no index
   2) non-compressed data + non-compressed index
   3) compressed data + non-compressed index
-
-Rename (and make public/private) in Parser.py.
-  parse_data_value
-  parse_data_values
-  parse_row_value
-  parse_row_values
-
-Implement parallelization in Parser.py.
 
 Test parsing CADD files.
   Rebuild these files.
@@ -20,12 +10,15 @@ Test parsing CADD files.
     tabix sorted.gff.gz chr1:10,000,000-20,000,000
   Move to test.sh and generate formal statistics on it?
 
+Implement parallelization in Parser.py.
+
 If we need to go faster to beat tabix:
     Try Nuitka. https://nuitka.net (compiles your Python code to C, is supposed to achieve speedups of 3x or greater).
 
 Do demo/tests on LINCS data (see WishBuilder)?
 
 Remove unnecessary comments and address TODO items in ../f4py/*.
+  Do this in VS Studio Code or PyCharm.
 
 #####################################################
 # After benchmark paper (for software packages)
